Maps and references for F2 biome

--- a/_EFGs/F2.1.md
+++ b/_EFGs/F2.1.md
@@ -23,12 +23,17 @@ Large water volumes influence resource availability, environmental stability (th
 
 Humid temperate and tropical regions on large land masses.
 
+{% capture map_det %} Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors. {% endcapture %}
+
 {% include MAP.html %}
 
-**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
-
 ## References
+
 ### Text references
-* Ludsin SA, DeVanna KM, Smith REH (2014) Physical-biological coupling and the challenge of understanding fish recruitment in freshwater lakes. Canadian Journal of Fisheries and Aquatic Sciences 71: 775-794. / Pennisi E (2018). Hybrids spawned Lake Victoria's rich fish diversity. Science 361: 539-539.
+
+* Ludsin SA, DeVanna KM, Smith REH (2014) Physical-biological coupling and the challenge of understanding fish recruitment in freshwater lakes. Canadian Journal of Fisheries and Aquatic Sciences 71: 775-794.
+* Pennisi E (2018). Hybrids spawned Lake Victoria's rich fish diversity. Science 361: 539-539.
+
 ### Map References
+
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
