--- a/_EFGs/F2.5.md
+++ b/_EFGs/F2.5.md
@@ -27,12 +27,18 @@ Arid climates have highly variable hydrology. Episodic inundation after rain is 
 
 Semi-arid and arid regions at mid latitudes of the Americas, Africa, west and Asia and Australia.
 
+{% capture map_det %} Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors. {% endcapture %}
+
 {% include MAP.html %}
 
-**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
-
 ## References
+
 ### Text references
-* Hancock MA, Timms BV (2002) Ecology of four turbid clay pans during a filling-drying cycle in the Paroo, semi-arid Australia. Hydrobiologia 479: 95-107. / Meintjes S (1996) Seasonal changes in the invertebrate community of small shallow ephemeral pans at Bain's Vlei, South Africa. Hydrobiologia 317: 51-64. / Williams WD (2000) Biodiversity in temporary wetlands of dryland regions. Internationale Vereinigung für theoretische und angewandte Limnologie: Verhandlungen 27: 141-144.
+
+* Hancock MA, Timms BV (2002) Ecology of four turbid clay pans during a filling-drying cycle in the Paroo, semi-arid Australia. Hydrobiologia 479: 95-107.
+* Meintjes S (1996) Seasonal changes in the invertebrate community of small shallow ephemeral pans at Bain's Vlei, South Africa. Hydrobiologia 317: 51-64.
+* Williams WD (2000) Biodiversity in temporary wetlands of dryland regions. Internationale Vereinigung für theoretische und angewandte Limnologie: Verhandlungen 27: 141-144.
+
 ### Map References
+
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
