--- a/_EFGs/F2.2.md
+++ b/_EFGs/F2.2.md
@@ -23,12 +23,17 @@ These lakes may be hydrologically isolated or connected to rivers, either termin
 
 Mainly in humid temperate and tropical regions, but usually not semi-arid or arid regions.
 
+{% capture map_det %} Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors. {% endcapture %}
+
 {% include MAP.html %}
 
-**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
-
 ## References
+
 ### Text references
-* Jeppesen E, Jensen JP, Søndergaard M, Lauridsen T, Pedersen LJ, Jensen L (1997) Top-down control in freshwater lakes: the role of nutrient state, submerged macrophytes and water depth. Hydrobiologia 342/343: 151-164. / Schindler DE, Scheuerell MD (2002) Habitat coupling in lake ecosystems. Oikos 98:177-189.
+
+* Jeppesen E, Jensen JP, Søndergaard M, Lauridsen T, Pedersen LJ, Jensen L (1997) Top-down control in freshwater lakes: the role of nutrient state, submerged macrophytes and water depth. Hydrobiologia 342/343: 151-164.
+* Schindler DE, Scheuerell MD (2002) Habitat coupling in lake ecosystems. Oikos 98:177-189.
+
 ### Map References
+
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
