references and maps for biome F3

--- a/_EFGs/F3.1.md
+++ b/_EFGs/F3.1.md
@@ -23,12 +23,17 @@ Reservoirs receive water from the rivers which they impound. Human management to
 
 Large reservoirs are scattered across all continents with greatest concentrations being in Asia, Europe and North America.
 
+{% capture map_det %} Indicative maps of Large reservoirs were obtained from Lehner & Doll (2004). {% endcapture %}
+
 {% include MAP.html %}
 
-**Map details**: Indicative maps of Large reservoirs were obtained from Lehner & Doll (2004).
 
 ## References
+
 ### Text references
+
 * Lehner B, Liermann CR, Revenga C, Vörösmarty C, Fekete B, Crouzet P, Döll P, Endejan M, Frenken K, Magome J, Nilsson C (2011) High‐resolution mapping of the world's reservoirs and dams for sustainable river‐flow management. Frontiers in Ecology and the Environment 9: 494-502.
+
 ### Map References
+
 * Lehner B, Döll P (2004) Development and validation of a global database of lakes,reservoirs and wetlands. Journal of Hydrology 296: 1–22.
