--- a/_EFGs/M1.1.md
+++ b/_EFGs/M1.1.md
@@ -15,9 +15,11 @@ Seagrass meadows are important sources of organic matter, much of which is retai
 
 Typically found in the subtidal zone on soft sedimentary substrates, but also occasionally on rocky substrates on low- to moderate-energy coastlines with low turbidity and on intertidal shorelines. Minimum water depth is determined mainly by wave orbital velocity, tidal exposure and wave energy (waves erode seagrass), while maximum depth is limited by the vertical diminution of light intensity in the water column. Seagrass growth can be limited by nitrogen and phosphorous availability, but in eutrophied waters high nutrient availability can lead to overgrowth of seagrasses by epiphytes and shading by algal blooms, leading to ecosystem collapse. Large storm events and associated wave action lead to seagrass loss.
 
-# Diagramatic assembly model
+# Diagrammatic assembly model
 
 {% include DAM.html %}
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 # Distribution
 
