--- a/_EFGs/M1.2.md
+++ b/_EFGs/M1.2.md
@@ -18,10 +18,12 @@ Kelps are benthic brown macroalgae (order Laminariales) forming canopies that sh
 
 Kelp forests are limited by light, nutrients, salinity, temperature, and herbivory. Growth rates are limited by light and proximity to sediment sources. High nutrient requirements are met by terrestrial runoff or upwelling currents, although eutrophication can lead to transition to turf beds. Truncated thermal niches limit the occurrence of kelps in warm waters. Herbivory on holdfasts influences recruitment and can constrain reversals of trophic cascades, even when propagules are abundant. Kelp forests occur on hard substrates in the upper photic zone and rely on wave action and currents for oxygen. Currents also play important roles in dispersing propagules of kelps and associated organisms. Storms may dislodge kelps creating gaps that may be maintained by herbivores, or rapidly recolonized.
 
-
-# Diagramatic assembly model
+# Diagrammatic assembly model
 
 {% include DAM.html %}
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
 
 # Distribution
 
