--- a/_EFGs/M1.3.md
+++ b/_EFGs/M1.3.md
@@ -15,6 +15,12 @@ Coral reefs are biogenic structures that have been built up, and continue to gro
 
 Coral reefs are limited to warm, shallow (rarely >60 m depth), clear, relatively nutrient-poor, open coastal waters, where salinity is 3.0-3.8% and sea temperatures vary between 17-34°C. Cooler temperatures are insufficient to support coral growth, while warmer temperatures cause coral symbiosis to break down (bleaching).  Reef geomorphology varies from atolls, barrier reefs, fringing reefs, lagoon to patch reefs depending upon hydrological and geological conditions. Reef structure and composition varies with depth gradients in light intensity and with turbulence which diminishes with distance from the ocean front. Storm regimes drive cycles of reef destruction and renewal.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
 # Distribution
 
 Tropical and subtropical waters on continental and island shelves, mostly within latitudes of 30° N and S.
