--- a/_EFGs/M1.5.md
+++ b/_EFGs/M1.5.md
@@ -19,11 +19,15 @@ These benthic systems are characterised by high densities of megabenthic sessile
 Light is generally insufficient to support macroalgae but above the photosynthetic threshold for coralline algae and cyanobacteria. Light is limited by diffusion through deep water, surface ice cover, turbidity from river outflow or tannins in terrestrial runoff. Low to moderate temperatures may further limit productivity.  These systems are generally found on hard substrates, but can occur on soft substrates. Currents or resuspension and lateral transport processes are important drivers of benthic-pelagic coupling, and hence food and nutrient supply. Natural physical disturbances are generally of low severity and frequency levels, but ice scour can generate successional mosaics on subpolar shelves.
 
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
 # Distribution
 
-
 Tropical to polar coastal waters, extending from the shallow subtidal to “twilight” zone on the shelf. Present-day distributions are likely to have been modified by benthic trawling.
-
 
 ## Map details
 
@@ -34,4 +38,3 @@ These are ecosystem functional groups that are widespread through the global ext
 * Baldwin C, Tornabene L, Robertson D (2018) Below the mesophotic. Scientific Reports 8: 4920. / Rossi S, Bramanti L, Gori, A, Orejas C (2017) Marine Animal Forests: The ecology of benthic biodiversity Hotspots. Springer, Berlin. / Rossi S. (2013) The destruction of the ‘animal forests’ in the oceans: towards an over-simplification of the benthic ecosystems. Ocean & coastal management 84: 77-85.
 ### Map References
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
-
