--- a/_EFGs/F3.3.md
+++ b/_EFGs/F3.3.md
@@ -15,16 +15,24 @@ Rice paddies are artificial wetlands with low horizontal and vertical heterogene
 
 Engineering of levees and channels enables water management to retain standing water a few centimetres above the soil surface and rapid drying at harvest time. This requires reliable water supply either through summer rains in the seasonal tropics or irrigation in warm temperate or semi-arid climates. The water has high oxygen content and usually warm temperatures. The deterministic water regimes and shallow depth limit niche diversity and have major influences on the physical, chemical, and biological properties of soils, which contain high nutrient levels. Rice paddies are often established on former floodplains, but may also be created on terraced hillsides. Other human interventions include cultivation and harvest, aquaculture and addition of fertilisers, herbicides and pesticides.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 More than a million square kilometres mostly in tropical and subtropical southeast Asia with small areas in Africa, Europe, South America, North America and Australia.
 
+{% capture map_det %} Indicative map of Rice paddies was estimated from the percentage of rice cover at a 5′ resolution based on Monfreda et al. (2008). {% endcapture %}
 {% include MAP.html %}
 
-**Map details**: Indicative map of Rice paddies was estimated from the percentage of rice cover at a 5′ resolution based on Monfreda et al. (2008).
-
 ## References
+
 ### Text references
-* Fernando CJH (1993) Rice field ecology and fish culture—an overview.  Hydrobiologia 259: 91-113. / Liesack W, Schnell S, Revsbech NP (2000) Microbiology of flooded rice paddies. FEMS Microbiology Reviews 24: 625-645.
+
+* Fernando CJH (1993) Rice field ecology and fish culture—an overview.  Hydrobiologia 259: 91-113.
+* Liesack W, Schnell S, Revsbech NP (2000) Microbiology of flooded rice paddies. FEMS Microbiology Reviews 24: 625-645.
+
 ### Map References
+
 * Monfreda C, Ramankutty N, Foley JA (2008) Farming the planet: 2. Geographic distribution of crop areas, yields, physiological types, and net primary production in the year 2000. Global Biogeochemical Cycles 22: GB1022.
