Maps and references for biome M1

--- a/_EFGs/M1.1.md
+++ b/_EFGs/M1.1.md
@@ -18,19 +18,21 @@ Typically found in the subtidal zone on soft sedimentary substrates, but also oc
 # Diagrammatic assembly model
 
 {% include DAM.html %}
-{% capture map_det %}  {% endcapture %}
-{% include MAP.html %}
 
 # Distribution
 
 Widely distributed along temperate and tropical coastlines of the world.
 
+{% capture map_det %} Indicative maps of Seagrass meadows were obtained from Green & Short (2003). {% endcapture %}
 {% include MAP.html %}
 
-**Map details**: Indicative maps of Seagrass meadows were obtained from Green & Short (2003).
-
 ## References
+
 ### Text references
-* De Boer WF (2007) Seagrass–sediment interactions, positive feedbacks and critical thresholds for occurrence: a review. Hydrobiologia 591: 5-24. / Orth RJ, Carruthers TJ, Dennison WC, Duarte CM, Fourqurean JW, Heck KL, Hughes AR, Kendrick GA, Kenworthy WJ, Olyarnik S, Short F (2006) A global crisis for seagrass ecosystems. Bioscience 56: 987-996.
+
+* De Boer WF (2007) Seagrass–sediment interactions, positive feedbacks and critical thresholds for occurrence: a review. Hydrobiologia 591: 5-24.
+* Orth RJ, Carruthers TJ, Dennison WC, Duarte CM, Fourqurean JW, Heck KL, Hughes AR, Kendrick GA, Kenworthy WJ, Olyarnik S, Short F (2006) A global crisis for seagrass ecosystems. Bioscience 56: 987-996.
+
 ### Map References
+
 * Green EP, Short FT (2003) World atlas of seagrasses. UNEP World Conservation Monitoring Centre. University of California Press, Berkeley. [map data from marine/WCMC_013_014_Seagrass_WMS]
