--- a/_EFGs/M1.2.md
+++ b/_EFGs/M1.2.md
@@ -21,25 +21,23 @@ Kelp forests are limited by light, nutrients, salinity, temperature, and herbivo
 # Diagrammatic assembly model
 
 {% include DAM.html %}
-{% capture map_det %}  {% endcapture %}
-{% include MAP.html %}
-
 
 # Distribution
 
 Nearshore rocky reefs to depths of 30 m in temperate and polar waters. Absent from warm tropical waters, but present in upwelling zones off Oman, Namibia, Peru and Galapagos.
 
-
+{% capture map_det %} Ecoregions with major and minor occurrences of Kelp forests were identified by overlaying a global map of kelp systems (Steneck et al. 2002) on marine ecoregions (Spalding et al. 2008), and then clipping to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014). {% endcapture %}
 {% include MAP.html %}
-
-**Map details**: Ecoregions with major and minor occurrences of Kelp forests were identified by overlaying a global map of kelp systems (Steneck et al. 2002) on marine ecoregions (Spalding et al. 2008), and then clipping to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
 
 ## References
 
 ### Text references
 
-* Bennett S, Wernberg T, Anderson RJ, Bolton JJ et al. (2015) Canopy interactions and physical stress gradients in subtidal communities. Ecology Letters 18: 677–686. / Steneck RS, Graham MH, Bourque BJ, Corbett D et al. (2002) Kelp forest ecosystem: biodiversity, stability, resilience and their future. Environmental Conservation 29: 436–459.
+* Bennett S, Wernberg T, Anderson RJ, Bolton JJ et al. (2015) Canopy interactions and physical stress gradients in subtidal communities. Ecology Letters 18: 677–686.
+* Steneck RS, Graham MH, Bourque BJ, Corbett D et al. (2002) Kelp forest ecosystem: biodiversity, stability, resilience and their future. Environmental Conservation 29: 436–459.
 
 ### Map References
 
-* Steneck RS, Graham MH, Bourque BJ, Corbett D, Erlandson JM, Estes JA, Tegner MJ (2002) Kelp forest ecosystems - biodiversity, stability, resilience and future. In: Environmental Conservation 29: 436–459. / Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583. / Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
+* Steneck RS, Graham MH, Bourque BJ, Corbett D, Erlandson JM, Estes JA, Tegner MJ (2002) Kelp forest ecosystems - biodiversity, stability, resilience and future. In: Environmental Conservation 29: 436–459.
+* Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583.
+* Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
