--- a/_EFGs/M1.3.md
+++ b/_EFGs/M1.3.md
@@ -18,19 +18,20 @@ Coral reefs are limited to warm, shallow (rarely >60 m depth), clear, relatively
 # Diagrammatic assembly model
 
 {% include DAM.html %}
-{% capture map_det %}  {% endcapture %}
-{% include MAP.html %}
 
 # Distribution
 
 Tropical and subtropical waters on continental and island shelves, mostly within latitudes of 30° N and S.
 
+{% capture map_det %} Indicative maps of Photic coral reefs were obtained from Institute for Marine Remote Sensing et al. (2011). {% endcapture %}
 {% include MAP.html %}
 
-**Map details**: Indicative maps of Photic coral reefs were obtained from Institute for Marine Remote Sensing et al. (2011).
-
 ## References
+
 ### Text references
+
 * Sheppard C, Davy S, Pilling G, Graham N (2018) The biology of coral reefs. 2nd Edition. Oxford University Press, Oxford.
+
 ### Map References
+
 * Institute for Marine Remote Sensing, University of South Florida (IMaRS/USF), Institut de Recherche pour le Développement (IRD), UNEP-WCMC, The WorldFish Center, and WRI (2011) Global Coral Reefs composite dataset compiled from multiple sources for use in the Reefs at Risk Revisited project incorporating products from the Millennium Coral Reef Mapping Project prepared by IMaRS/USF and IRD.
