--- a/_EFGs/M1.4.md
+++ b/_EFGs/M1.4.md
@@ -21,8 +21,6 @@ These ecosystems are founded on intertidal or subtidal three-dimensional biogeni
  # Diagrammatic assembly model
 
  {% include DAM.html %}
- {% capture map_det %}  {% endcapture %}
- {% include MAP.html %}
 
 
 # Distribution
@@ -30,17 +28,18 @@ These ecosystems are founded on intertidal or subtidal three-dimensional biogeni
 
 Estuarine and coastal waters of temperate and tropical regions, extending from subtidal to intertidal zones. Present-day distributions are shaped by historic overharvest, which has removed 85% of reefs, globally.
 
-
-## Map details
-
-Ecoregions with major and minor occurrences of Shellfish beds and reefs were identified by overlaying a global map of oyster reefs (Beck et al. 2011) on marine ecoregions (Spalding et al. 2008), and then clipping to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
+{% capture map_det %} Ecoregions with major and minor occurrences of Shellfish beds and reefs were identified by overlaying a global map of oyster reefs (Beck et al. 2011) on marine ecoregions (Spalding et al. 2008), and then clipping to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014). {% endcapture %}
+{% include MAP.html %}
 
 ## References
 
 ### Text references
 
-* Beck MW, Brumbaugh RD, Airoldi L, Carranza A, Coen LD, Crawford C, Defeo O, Edgar GJ, Hancock B, Kay MC, Lenihan HS (2011) Oyster reefs at risk and recommendations for conservation, restoration and management. Bioscience 61:107-116. / Dame RF, Patten BC (1981) Analysis of energy flows in an intertidal oyster reef. Marine Ecology Progress Series 5:115-124.
+* Beck MW, Brumbaugh RD, Airoldi L, Carranza A, Coen LD, Crawford C, Defeo O, Edgar GJ, Hancock B, Kay MC, Lenihan HS (2011) Oyster reefs at risk and recommendations for conservation, restoration and management. Bioscience 61:107-116.
+* Dame RF, Patten BC (1981) Analysis of energy flows in an intertidal oyster reef. Marine Ecology Progress Series 5:115-124.
 
 ### Map References
 
-* Beck MW, Brumbaugh RD, Airoldi L, Carranza A,. Coen LD, Crawford C, Defeo O, Edgar GJ, Handcock B, Kay MC, Lenihan HS, Luckenbach M, Toropova CL, Zhang G, Guo X (2011) Oyster reefs at risk and recommendations for conservation, restoration, and management. BioScience 61: 107-116. / Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583. / Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
+* Beck MW, Brumbaugh RD, Airoldi L, Carranza A,. Coen LD, Crawford C, Defeo O, Edgar GJ, Handcock B, Kay MC, Lenihan HS, Luckenbach M, Toropova CL, Zhang G, Guo X (2011) Oyster reefs at risk and recommendations for conservation, restoration, and management. BioScience 61: 107-116.
+* Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583.
+* Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
