--- a/_EFGs/M1.5.md
+++ b/_EFGs/M1.5.md
@@ -22,19 +22,22 @@ Light is generally insufficient to support macroalgae but above the photosynthet
 # Diagrammatic assembly model
 
 {% include DAM.html %}
-{% capture map_det %}  {% endcapture %}
-{% include MAP.html %}
 
 # Distribution
 
 Tropical to polar coastal waters, extending from the shallow subtidal to “twilight” zone on the shelf. Present-day distributions are likely to have been modified by benthic trawling.
 
-## Map details
-
-These are ecosystem functional groups that are widespread through the global extent of the marine shelf biome. Reliable data on their precise distribution are limited. To represent regional uncertainty, their indicative distributions were mapped in yellow through the full extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
+{% capture map_det %} These are ecosystem functional groups that are widespread through the global extent of the marine shelf biome. Reliable data on their precise distribution are limited. To represent regional uncertainty, their indicative distributions were mapped in yellow through the full extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014). {% endcapture %}
+{% include MAP.html %}
 
 ## References
+
 ### Text references
-* Baldwin C, Tornabene L, Robertson D (2018) Below the mesophotic. Scientific Reports 8: 4920. / Rossi S, Bramanti L, Gori, A, Orejas C (2017) Marine Animal Forests: The ecology of benthic biodiversity Hotspots. Springer, Berlin. / Rossi S. (2013) The destruction of the ‘animal forests’ in the oceans: towards an over-simplification of the benthic ecosystems. Ocean & coastal management 84: 77-85.
+
+* Baldwin C, Tornabene L, Robertson D (2018) Below the mesophotic. Scientific Reports 8: 4920.
+* Rossi S, Bramanti L, Gori, A, Orejas C (2017) Marine Animal Forests: The ecology of benthic biodiversity Hotspots. Springer, Berlin.
+* Rossi S. (2013) The destruction of the ‘animal forests’ in the oceans: towards an over-simplification of the benthic ecosystems. Ocean & coastal management 84: 77-85.
+
 ### Map References
+
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
