--- a/_EFGs/M1.8.md
+++ b/_EFGs/M1.8.md
@@ -15,16 +15,25 @@ Muddy substrates of continental and island shelves support moderately productive
 
 These depositional systems are characterised by low kinetic energy (weak turbulence and currents), which promotes accumulation of fine-textured, stable sediments that are best developed on flat bottoms or gentle slopes. The benthic surface is relatively homogeneous, except where structure is engineered by burrowing organisms.  The small particle size and poor interchange of interstitial water limit oxygen supply, and anaerobic conditions are especially promoted where abundant infall of organic matter supports higher bacterial activity that depletes available dissolved oxygen. On the other hand, the stability of muddy substrates makes them more conducive to the establishment of permanent burrows.  Bioturbation and bio-irrigation activities by a variety of benthic fauna in muddy substrates are important contributors to marine nutrient and biogeochemical cycling, as well as replenishment of oxygen.
 
+
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Globally distributed in low energy waters of continental and island shelves.
 
-## Map details
-
-These are ecosystem functional groups that are widespread through the global extent of the marine shelf biome. Reliable data on their precise distribution are limited. To represent regional uncertainty, their indicative distributions were mapped in yellow through the full extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
+{% capture map_det %} These are ecosystem functional groups that are widespread through the global extent of the marine shelf biome. Reliable data on their precise distribution are limited. To represent regional uncertainty, their indicative distributions were mapped in yellow through the full extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014). {% endcapture %}
+{% include MAP.html %}
 
 ## References
+
 ### Text references
-* Byers JE, Grabowski JH (2014) Soft-sediment communities. In: Marine community ecology and conservation (Eds. MD Bertness, JF Bruno, BR Silliman, JJ Stachowicz), pp227-249. Sinauer, Sunderland. / Snelgrove PVR (1999) Getting to the bottom of marine biodiversity: sedimentary habitats. Bioscience 49: 129-138.
+
+* Byers JE, Grabowski JH (2014) Soft-sediment communities. In: Marine community ecology and conservation (Eds. MD Bertness, JF Bruno, BR Silliman, JJ Stachowicz), pp227-249. Sinauer, Sunderland.
+* Snelgrove PVR (1999) Getting to the bottom of marine biodiversity: sedimentary habitats. Bioscience 49: 129-138.
+
 ### Map References
+
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
