--- a/_EFGs/M1.9.md
+++ b/_EFGs/M1.9.md
@@ -23,16 +23,18 @@ Upwelling is a wind-driven process that draws cold, nutrient-rich water towards 
 
 The most productive upwelling zones are coastal, notably in four major eastern boundary current systems (Canary, Benguela, California, and Humboldt), although upwelling does also occur in the open ocean (e.g. along the Intertropical Convergence Zone).
 
+{% capture map_det %} Marine ecoregions (Spalding et al. 2008) with major and minor occurrences of Upwelling zones were identified by consulting global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and expertise of authors. The identified ecoregions were then clipped to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014). {% endcapture %}
 {% include MAP.html %}
 
-**Map details**: Marine ecoregions (Spalding et al. 2008) with major and minor occurrences of Upwelling zones were identified by consulting global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and expertise of authors. The identified ecoregions were then clipped to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
 
 ## References
 
 ### Text references
 
-* Cury P, Shannon L, Shin YJ (2003) The functioning of marine ecosystems: a fisheries perspective. In: Responsible fisheries in the marine ecosystem (Eds. M Sinclair, G Valdimarsson), p103–123. FAO, Rome, & CABI Publishing, Wallingford. / Hutchings L, Pitcher GC, Probyn TA, Bailey GW (1995) The chemical and biological consequences of coastal upwelling. In: Upwelling in the oceans: Modern Processes and Ancient Records (Eds. CP Summerhayes, KC Emeis, MV Angel, RL Smith, B Zeitzschel), pp. 65–81. John Wiley, New York.
+* Cury P, Shannon L, Shin YJ (2003) The functioning of marine ecosystems: a fisheries perspective. In: Responsible fisheries in the marine ecosystem (Eds. M Sinclair, G Valdimarsson), p103–123. FAO, Rome, & CABI Publishing, Wallingford.
+* Hutchings L, Pitcher GC, Probyn TA, Bailey GW (1995) The chemical and biological consequences of coastal upwelling. In: Upwelling in the oceans: Modern Processes and Ancient Records (Eds. CP Summerhayes, KC Emeis, MV Angel, RL Smith, B Zeitzschel), pp. 65–81. John Wiley, New York.
 
 ### Map References
 
-* Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583. / Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
+* Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583.
+* Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
