--- a/_EFGs/M2.1.md
+++ b/_EFGs/M2.1.md
@@ -19,6 +19,9 @@ The epipelagic zone is structured by a strong depth gradient in light. Depth is 
 
 The surface layer of the entire open ocean beyond the near-shore zone.
 
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
 ## Map details
 
 Indicative distributions of these marine pelagic ecosystem functional groups were derived from bathymetric spatial data obtained from Becker et al. (2009) using depth range thresholds cited in respective descriptive profiles for each functional group.
@@ -28,4 +31,3 @@ Indicative distributions of these marine pelagic ecosystem functional groups wer
 * Sutton TT (2013) Vertical ecology of the pelagic ocean: Classical patterns and new perspectives. Journal of Fish Biology 83: 1508‐1527. / Stal LJ (2016) The euphotic realm. In The Marine Microbiome (Eds. LJ Stal, MS Cretoiu), pp. 209-225. Springer, Switzerland.
 ### Map References
 * Becker JJ, Sandwell DT, Smith WHF, Braud J, Binder B, Depner J, Fabre D, Factor J, Ingalls S, Kim S-H, Ladner R, Marks K, Nelson S, Pharaoh A, Trimmer R, Von Rosenberg J, Wallace G, Weatherall P (2009) Global Bathymetry and Elevation Data at 30 Arc Seconds Resolution: SRTM30_PLUS, Marine Geodesy 32: 355-371.
-
