--- a/_EFGs/M1.7.md
+++ b/_EFGs/M1.7.md
@@ -15,16 +15,25 @@ Medium to course-grained, unvegetated, soft minerogenic sediments have moderate 
 
 The substrate is soft, minerogenic, low in organic matter, relatively homogeneous, structurally simple and mobile. The pelagic waters are moderate to high-energy environments, with waves and currents promoting substrate instability. Nonetheless, depositional processes dominate over erosion, leading to net sediment accumulation. Fluvial inputs from land and erosion of headlands and sea cliffs contribute the main sources of sediment, nutrients and organic matter, although significant lateral movement is usually driven by longshore currents. Light availability diminishes with depth. Mixing is promoted by waves and currents, ensuring low temporal variability in salinity, which averages 3.5%.
 
+
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Globally widespread around continental and island shelves.
 
-## Map details
-
-These are ecosystem functional groups that are widespread through the global extent of the marine shelf biome. Reliable data on their precise distribution are limited. To represent regional uncertainty, their indicative distributions were mapped in yellow through the full extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
+{% capture map_det %} These are ecosystem functional groups that are widespread through the global extent of the marine shelf biome. Reliable data on their precise distribution are limited. To represent regional uncertainty, their indicative distributions were mapped in yellow through the full extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014). {% endcapture %}
+{% include MAP.html %}
 
 ## References
+
 ### Text references
-* Byers JE, Grabowski JH (2014) Soft-sediment communities. In: Marine community ecology and conservation (Eds. MD Bertness, JF Bruno, BR Silliman, JJ Stachowicz), pp227-249. Sinauer, Sunderland. / Snelgrove PVR (1999) Getting to the bottom of marine biodiversity: sedimentary habitats. Bioscience 49: 129-138.
+
+* Byers JE, Grabowski JH (2014) Soft-sediment communities. In: Marine community ecology and conservation (Eds. MD Bertness, JF Bruno, BR Silliman, JJ Stachowicz), pp227-249. Sinauer, Sunderland.
+* Snelgrove PVR (1999) Getting to the bottom of marine biodiversity: sedimentary habitats. Bioscience 49: 129-138.
+
 ### Map References
+
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
